--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@
     padding: 0;
 }
 
+button,
+input,
+textarea,
+select {
+    font-family: inherit;
+}
+
 :root {
     --bg: #000000;
     --bg2: #0a0a0a;
